--- a/vision/pipeline/config/pipeline_config.yaml
+++ b/vision/pipeline/config/pipeline_config.yaml
@@ -1,8 +1,9 @@
 # config.yaml
-exp_file: C:\Users\Matan\Documents\Projects\fsCounter\vision\Detector\YOLOX\exps\default\yolox_tiny.py
-ckpt_file: C:\Users\Matan\Documents\Projects\weights\yolox_tiny.pth
+exp_file: /home/fruitspec-lab/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr.py
 
-device: cpu
+ckpt_file: /home/fruitspec-lab/FruitSpec/weights/fs_yolox_tiny_lr/best_ckpt.pth
+
+device: cuda
 
 input_size: [414, 414]
 
