--- a/vision/Detector/yolo_x/requirements.txt
+++ b/vision/Detector/yolo_x/requirements.txt
@@ -13,5 +13,5 @@ tabulate
 # pycocotools corresponds to https://github.com/ppwwyyxx/cocoapi
 pycocotools>=2.0.2
 onnx==1.8.1
-onnxruntime==1.8.0
-onnx-simplifier==0.3.5
+#onnxruntime==1.8.0
+#onnx-simplifier==0.3.5
