--- a/vision/requirements.txt
+++ b/vision/requirements.txt
@@ -14,14 +14,15 @@ lap
 motmetrics
 filterpy
 h5py
-Cython
+omegaconf
+#Cython
 # cython was installed from the following:
 # pip install Cython -i http://pypi.douban.com/simple --trusted-host pypi.douban.com
-cython_bbox
+#cython_bbox
 
 # verified versions
 # pycocotools corresponds to https://github.com/ppwwyyxx/cocoapi
 pycocotools>=2.0.2
-onnx==1.8.1
-onnxruntime==1.8.0
-onnx-simplifier==0.3.5
+#onnx==1.8.1
+#onnxruntime==1.8.0
+#onnx-simplifier==0.3.5
