--- a/vision/pipelines/config/pipeline_config.yaml
+++ b/vision/pipelines/config/pipeline_config.yaml
@@ -1,34 +1,32 @@
 # config.yaml
-exp_file: /home/fruitspec-lab/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr.py
+exp_file: /home/fruitspec-lab/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_hires.py
 #exp_file: /home/yotam/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr.py
 
-ckpt_file: /home/fruitspec-lab/FruitSpec/weights/fs_yolox_tiny_lr/best_ckpt.pth
+ckpt_file: /home/fruitspec-lab/FruitSpec/weights/fs_yolox_tiny_res1024X1024/best_ckpt.pth
 #ckpt_file: /home/yotam/FruitSpec/weights/fs_yolox_tiny_lr/best_ckpt.pth
 
 device: cuda
 
-input_size: [414, 414]
+input_size: [1024, 1024]
 
 detector:
-  confidence: 0.1
+  confidence: 0.315
   nms: 0.65
-  num_of_classes: 3
+  num_of_classes: 1
   fp16: true
   fuse: false
   trt: false
 
 classes:
-  dummy: 0
-  grape: 1
-  fruit: 2
+  fruit: 0
 
 tracker:
-  frame_rate: 30
-  track_thresh: 0.2
-  track_buffer: 30
-  match_threshold: 0.9
-  min_box_area: 100
+  frame_rate: 10
+  track_thresh: 0.35
+  track_buffer: 10
+  match_threshold: 0.99
+  min_box_area: 20
   orig_width: 2048
   orig_height: 1536
-  mot20: false
+  mot20: true
 
