--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "application/JAI-Operator-client"]
 	path = application/JAI-Operator-client
-	url = https://github.com/FruitSpec/JAI-Operator-client.git
+	url = git@github.com:FruitSpec/JAI-Operator-client.git
     branch = master
