--- a/vision/pipelines/config/pipeline_config.yaml
+++ b/vision/pipelines/config/pipeline_config.yaml
@@ -1,19 +1,26 @@
 # config.yaml
-#exp_file: /home/yotam/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_RGB.py
-#exp_file: /home/yotam/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr.py
-exp_file: /home/yotam/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_syn_jai.py
+#exp_file: /home/yotam/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_RGB.py  # tomatoes
+#exp_file: /home/yotam/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_hires.py  # counter
+#exp_file: /home/yotam/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr.py       # baseline
+exp_file: /home/yotam/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_syn_jai.py # pepper
 
-#ckpt_file: /home/yotam/FruitSpec/Sandbox/Run_2_13_nov_2022/best_ckpt.pth
-#ckpt_file: /home/yotam/FruitSpec/weights/fs_yolox_tiny_lr/best_ckpt.pth
-ckpt_file: /home/yotam/FruitSpec/weights/pepper/Run_3_22_oct_2022/best_ckpt.pth
+#ckpt_file: /home/yotam/FruitSpec/Sandbox/Run_2_13_nov_2022/best_ckpt.pth # tomatoes
+#ckpt_file: /home/yotam/FruitSpec/weights/fs_yolox_tiny_lr/best_ckpt.pth # pre-trained coco
+#ckpt_file: /home/yotam/FruitSpec/weights/Run_2_7_oct/best_ckpt.pth # counter
+#ckpt_file: /home/yotam/FruitSpec/weights/pepper/Run_3_22_oct_2022/best_ckpt.pth # pepper 200 img train
+ckpt_file: /home/yotam/FruitSpec/weights/pepper/Run_1_23_oct_2022_400img/best_ckpt.pth # pepper 400 img train
+#ckpt_file: /home/yotam/FruitSpec/Sandbox/Run_26_oct_2022_curated_data/best_ckpt.pth  # new RGB tomatoes
+#ckpt_file: /home/yotam/FruitSpec/weights/tomatoes/Run_28_oct_curated_2x/best_ckpt.pth # new RGB tomatoes 28/11
+#ckpt_file: /home/yotam/FruitSpec/Sandbox/Syngenta/weights/tomatoes/Run_30_oct_2022_1Class_aug_tasq/best_ckpt.pth # new RGB tomatoes 1 class 29/11
+
 
 device: cuda
 
 input_size: [1024, 1024]
 
 detector:
-  confidence: 0.3
-  nms: 0.65
+  confidence: 0.8
+  nms: 0.85
   num_of_classes: 2
   fp16: true
   fuse: false
@@ -26,6 +33,19 @@ classes:
 tracker:
   minimal_max_distance: 10
   score_weights: [0.5, 1, 0.5]
-  match_type: inter
+  match_type:  inter #center #
+  det_area: 0.7
   translation_size: 640
+
+
+filters:
+  distance:
+    threshold: 140
+  duplicates:
+    iou_threshold: 0.6
+  size:
+    size_threshold: 1000
+  height:
+    bias: -200
+    y_crop: 200
 
