--- a/vision/pipelines/config/pipeline_config.yaml
+++ b/vision/pipelines/config/pipeline_config.yaml
@@ -1,17 +1,18 @@
 # config.yaml
-#exp_file: /home/yotam/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_RGB.py  # tomatoes
+exp_file: /home/yotam/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_RGB.py  # tomatoes
 #exp_file: /home/yotam/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_hires.py  # counter
 #exp_file: /home/yotam/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr.py       # baseline
-exp_file: /home/yotam/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_syn_jai.py # pepper
+#exp_file: /home/yotam/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_syn_jai.py # pepper
 
 #ckpt_file: /home/yotam/FruitSpec/Sandbox/Run_2_13_nov_2022/best_ckpt.pth # tomatoes
 #ckpt_file: /home/yotam/FruitSpec/weights/fs_yolox_tiny_lr/best_ckpt.pth # pre-trained coco
 #ckpt_file: /home/yotam/FruitSpec/weights/Run_2_7_oct/best_ckpt.pth # counter
 #ckpt_file: /home/yotam/FruitSpec/weights/pepper/Run_3_22_oct_2022/best_ckpt.pth # pepper 200 img train
-ckpt_file: /home/yotam/FruitSpec/weights/pepper/Run_1_23_oct_2022_400img/best_ckpt.pth # pepper 400 img train
+#ckpt_file: /home/yotam/FruitSpec/weights/pepper/Run_1_23_oct_2022_400img/best_ckpt.pth # pepper 400 img train
 #ckpt_file: /home/yotam/FruitSpec/Sandbox/Run_26_oct_2022_curated_data/best_ckpt.pth  # new RGB tomatoes
 #ckpt_file: /home/yotam/FruitSpec/weights/tomatoes/Run_28_oct_curated_2x/best_ckpt.pth # new RGB tomatoes 28/11
 #ckpt_file: /home/yotam/FruitSpec/Sandbox/Syngenta/weights/tomatoes/Run_30_oct_2022_1Class_aug_tasq/best_ckpt.pth # new RGB tomatoes 1 class 29/11
+ckpt_file: /home/yotam/FruitSpec/Sandbox/Syngenta/weights/tomatoes/Run_6_Dec_2022_1Class_aug_tasqV2/best_ckpt.pth # RGB tasq v2
 
 
 device: cuda
@@ -19,9 +20,9 @@ device: cuda
 input_size: [1024, 1024]
 
 detector:
-  confidence: 0.8
-  nms: 0.85
-  num_of_classes: 2
+  confidence: 0.4
+  nms: 0.65
+  num_of_classes: 1
   fp16: true
   fuse: false
   trt: false
@@ -32,10 +33,18 @@ classes:
 
 tracker:
   minimal_max_distance: 10
-  score_weights: [0.5, 1, 0.5]
+  major: 4 #3
+  minor: 0.5 #2.5
+  max_losses: 5  # 10
+  score_weights: [0.25, 1.0, 0.25, 0.0]  # [0.25, 1.0, 0.25, 1]
   match_type:  inter #center #
   det_area: 0.7
   translation_size: 640
+
+translation:
+  translation_size: 480
+  mode: match # match: use template matching, keypoints: use keypoints detection
+  dets_only: true # true: perfrom on detections only, false: on entire image
 
 
 filters:
@@ -46,6 +55,9 @@ filters:
   size:
     size_threshold: 1000
   height:
-    bias: -200
+    bias: -100
     y_crop: 200
+
+clusters:
+  min_single_fruit_distance: 150
 
