--- a/application/utils/config.yaml
+++ b/application/utils/config.yaml
@@ -2,3 +2,5 @@ GUI: true
 logs path: "path/to/logfile"
 log name: "log"
 customer code: "TNKBLL"
+default_plots: ["PLOT001", "PLOT002", "PLOT003"]
+
