--- a/vision/pipelines/config/pipeline_config.yaml
+++ b/vision/pipelines/config/pipeline_config.yaml
@@ -11,8 +11,8 @@ exp_file: /home/yotam/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruit
 #ckpt_file: /home/yotam/FruitSpec/weights/pepper/Run_1_23_oct_2022_400img/best_ckpt.pth # pepper 400 img train
 #ckpt_file: /home/yotam/FruitSpec/Sandbox/Run_26_oct_2022_curated_data/best_ckpt.pth  # new RGB tomatoes
 #ckpt_file: /home/yotam/FruitSpec/weights/tomatoes/Run_28_oct_curated_2x/best_ckpt.pth # new RGB tomatoes 28/11
-#ckpt_file: /home/yotam/FruitSpec/Sandbox/Syngenta/weights/tomatoes/Run_30_oct_2022_1Class_aug_tasq/best_ckpt.pth # new RGB tomatoes 1 class 29/11
-ckpt_file: /home/yotam/FruitSpec/Sandbox/Syngenta/weights/tomatoes/Run_6_Dec_2022_1Class_aug_tasqV2/best_ckpt.pth # RGB tasq v2
+ckpt_file: /home/yotam/FruitSpec/Sandbox/Syngenta/weights/tomatoes/Run_30_oct_2022_1Class_aug_tasq/best_ckpt.pth # new RGB tomatoes 1 class 29/11
+#ckpt_file: /home/yotam/FruitSpec/Sandbox/Syngenta/weights/tomatoes/Run_6_Dec_2022_1Class_aug_tasqV2/best_ckpt.pth # RGB tasq v2
 
 
 device: cuda
@@ -20,8 +20,8 @@ device: cuda
 input_size: [1024, 1024]
 
 detector:
-  confidence: 0.4
-  nms: 0.65
+  confidence: 0.8 #0.315
+  nms: 0.6
   num_of_classes: 1
   fp16: true
   fuse: false
@@ -33,10 +33,10 @@ classes:
 
 tracker:
   minimal_max_distance: 10
-  major: 4 #3
+  major: 3 #4
   minor: 0.5 #2.5
-  max_losses: 5  # 10
-  score_weights: [0.25, 1.0, 0.25, 0.0]  # [0.25, 1.0, 0.25, 1]
+  max_losses: 10  # 5
+  score_weights: [0.25, 1.0, 0.25, 1] # [0.25, 1.0, 0.25, 0.0]  # [0.25, 1.0, 0.25, 1]
   match_type:  inter #center #
   det_area: 0.7
   translation_size: 640
@@ -49,14 +49,14 @@ translation:
 
 filters:
   distance:
-    threshold: 140
+    threshold: 190
   duplicates:
-    iou_threshold: 0.6
+    iou_threshold: 0.7
   size:
     size_threshold: 1000
   height:
-    bias: -100
-    y_crop: 200
+    bias: 100
+    y_crop: 250
 
 clusters:
   min_single_fruit_distance: 150
