--- a/vision/pipelines/config/runtime_config.yaml
+++ b/vision/pipelines/config/runtime_config.yaml
@@ -1,9 +1,7 @@
-movie_path: /media/yotam/Extreme SSD/syngenta trail/tomato/061022/YATED62L/HD1080_SN39018199_11-07-44.svo
-output_folder: /home/yotam/FruitSpec/Sandbox/Syngenta/tomatoes/YATED62L
-#output_folder: /home/yotam/FruitSpec/Sandbox/fsi_test_1
-#movie_path:
+movie_path: /media/yotam/Extreme SSD/syngenta trail/tomato/281222/post70cm/ZED_1_1st.svo
+output_folder: /media/yotam/Extreme SSD/syngenta trail/tomato/analysis/281222/1stpost70cm
 
-frame_size:  [1920, 1080] # [2048, 1536]
+frame_size: [1920, 1080] # [1920, 1080] # [2048, 1536]
 rotate: 2 # 0: no rotate, 1: COUNTERCLOCKWISE, 2: CLOCKWISE
 depth_minimum: 0.1 # 1 counter
 depth_maximum: 2.5 # 8 counter
