--- a/analytics/tools/mapping.yml
+++ b/analytics/tools/mapping.yml
@@ -5,5 +5,5 @@ tomato:
     side1: [9,11,7,19,21]
     side2: [9,10,8,18,20]
   commercial:
-    side1: {"GAM31":[12, 6],"GAM29":[14,4],"GAM27":[16,2]}
-    side2: {"GAM31":[13, 5],"GAM29":[15,3],"GAM27":[17,1]}
+    side1: {"GAM31":[12,6],"GAM29":[14,4],"GAM27":[16,2]}
+    side2: {"GAM31":[13,5],"GAM29":[15,3],"GAM27":[17,1]}
