analyzer adding measuers nameing format
color- hue_filtering

config - new paramaters for filtering and matrgin configurations

rgb_pipeline - nameing based on paramaters

svo_operations:
get_cropped_point_cloud- added adjustment to RGB
filter_xyz_outliers -bug fix
ellipsoid_fit - return in cm instead of mm
get_dimensions - a more general implementation to different sizing methods and filtering
get_dims_w_pixel_size - cm instead of mm

utils:
open_measures - measures_name

--- a/vision/pipelines/config/pipeline_config.yaml
+++ b/vision/pipelines/config/pipeline_config.yaml
@@ -22,8 +22,9 @@ device: cuda
 
 input_size: [1024, 1024]
 
-dim_method: pix_size_median # with what method to get the dimensions, reg - old method, ellipsoid - ellipsoid fitting,
+dim_method: reg # with what method to get the dimensions, reg - old method, ellipsoid - ellipsoid fitting,
                     #pix_size_median - by pixel size median, pix_size_mean - by pixel size mean, reg_kde - old method with kde filtering
+margin: 0.2 # the lower the margin the more pixels we take from the center
 
 detector:
   confidence: 0.7
@@ -63,6 +64,8 @@ filters:
   height:
     bias: -100
     y_crop: 200
+  hue: False # flag for using hue filter
+  depth: False # flag for using dynamic depth filter
 
 clusters:
   min_single_fruit_distance: 150
