--- a/vision/pipelines/config/pipeline_config.yaml
+++ b/vision/pipelines/config/pipeline_config.yaml
@@ -22,7 +22,7 @@ device: cuda
 
 input_size: [1024, 1024]
 
-dim_method: reg # with what method to get the dimensions, reg - old method, ellipsoid - ellipsoid fitting,
+dim_method: pix_size_median # with what method to get the dimensions, reg - old method, ellipsoid - ellipsoid fitting,
                     #pix_size_median - by pixel size median, pix_size_mean - by pixel size mean, reg_kde - old method with kde filtering
 margin: 0.2 # the lower the margin the more pixels we take from the center
 
@@ -64,8 +64,8 @@ filters:
   height:
     bias: -100
     y_crop: 200
-  hue: False # flag for using hue filter
-  depth: False # flag for using dynamic depth filter
+  hue: true # flag for using hue filter
+  depth: true # flag for using dynamic depth filter
 
 clusters:
   min_single_fruit_distance: 150
