--- a/vision/pipelines/config/runtime_config.yaml
+++ b/vision/pipelines/config/runtime_config.yaml
@@ -1,7 +1,12 @@
-movie_path: /home/fruitspec-lab/Downloads/0.5m1sts/ZED_1.svo
-output_folder:  /home/fruitspec-lab/Downloads/0.5m1sts/output
-output_folder_track:  /home/fruitspec-lab/Downloads/0.5m1sts/output/tracking
-output_folder_annotate:  /home/fruitspec-lab/Downloads/0.5m1sts/output/annotation
+#movie_path: /home/fruitspec-lab/Downloads/tomato/230123/pre/5/ZED_1.svo
+#output_folder:  /home/fruitspec-lab/Downloads/tomato/analysis/230123/pre/5/output
+#output_folder_track:  /home/fruitspec-lab/Downloads/tomato/analysis/230123/pre/5/tracking
+#output_folder_annotate:  /home/fruitspec-lab/Downloads/tomato/analysis/230123/pre/5/annotation
+
+movie_path: /home/fruitspec-lab/Downloads/0.8m1stm/ZED_1.svo
+output_folder:  /home/fruitspec-lab/Downloads/0.8m1stm/output
+output_folder_track:  /home/fruitspec-lab/Downloads/0.8m1stm/tracking
+output_folder_annotate:  /home/fruitspec-lab/Downloads/0.8m1stm/annotation
 
 frame_size: [1920, 1080] # [1920, 1080] # [2048, 1536]
 rotate: 2 # 0: no rotate, 1: COUNTERCLOCKWISE, 2: CLOCKWISE
