--- a/vision/pipelines/config/pipeline_config.yaml
+++ b/vision/pipelines/config/pipeline_config.yaml
@@ -1,10 +1,8 @@
 # config.yaml
-#exp_file: /home/yotam/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_RGB.py  # tomatoes # Lab2
-exp_file: /home/fruitspec-lab/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_RGB.py # Lab 1
-
-#exp_file: /home/yotam/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_hires.py  # counter
-#exp_file: /home/yotam/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr.py       # baseline
-#exp_file: /home/yotam/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_syn_jai.py # pepper
+exp_file: /home/fruitspec-lab-3/FruitSpec/Code/Matan/fsCounter_1/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_RGB.py  # tomatoes
+#exp_file: /home/yotam/FruitSpec/Code/fsCounter_1/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_hires.py  # counter
+#exp_file: /home/yotam/FruitSpec/Code/fsCounter_1/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr.py       # baseline
+#exp_file: /home/yotam/FruitSpec/Code/fsCounter_1/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_syn_jai.py # pepper
 
 #ckpt_file: /home/yotam/FruitSpec/Sandbox/Run_2_13_nov_2022/best_ckpt.pth # tomatoes
 #ckpt_file: /home/yotam/FruitSpec/weights/fs_yolox_tiny_lr/best_ckpt.pth # pre-trained coco
@@ -14,17 +12,12 @@ exp_file: /home/fruitspec-lab/FruitSpec/Code/fsCounter/vision/detector/yolo_x/ex
 #ckpt_file: /home/yotam/FruitSpec/Sandbox/Run_26_oct_2022_curated_data/best_ckpt.pth  # new RGB tomatoes
 #ckpt_file: /home/yotam/FruitSpec/weights/tomatoes/Run_28_oct_curated_2x/best_ckpt.pth # new RGB tomatoes 28/11
 #ckpt_file: /home/yotam/FruitSpec/Sandbox/Syngenta/weights/tomatoes/Run_30_oct_2022_1Class_aug_tasq/best_ckpt.pth # new RGB tomatoes 1 class 29/11
-#ckpt_file: /home/yotam/FruitSpec/Sandbox/Syngenta/weights/tomatoes/Run_6_Dec_2022_1Class_aug_tasqV2/best_ckpt.pth # RGB tasq v2 #Lab 2
-ckpt_file: /home/fruitspec-lab/FruitSpec/weights/Run_6_Dec_2022_1Class_aug_tasqV2/best_ckpt.pth # RGB tasq v2 Lab 1
+ckpt_file: /home/fruitspec-lab-3/FruitSpec/weights/Run_6_Dec_2022_1Class_aug_tasqV2/best_ckpt.pth # RGB tasq v2
 
 
 device: cuda
 
 input_size: [1024, 1024]
-
-dim_method: reg # with what method to get the dimensions, reg - old method, ellipsoid - ellipsoid fitting,
-                    #pix_size_median - by pixel size median, pix_size_mean - by pixel size mean, reg_kde - old method with kde filtering
-margin: 0.2 # the lower the margin the more pixels we take from the center
 
 detector:
   confidence: 0.7
@@ -40,10 +33,10 @@ classes:
 
 tracker:
   minimal_max_distance: 10
-  major: 3 #3
-  minor: 0.5 #2.5
-  max_losses: 5  # 10
-  score_weights: [0.25, 1.0, 0.25, 1] # [0.25, 1.0, 0.25, 0.0] # [0.25, 1.0, 0.25, 1]
+  major: 1.2 #3
+  minor: 0.8 #2.5
+  max_losses: 3  # 10
+  score_weights: [0.5, 1, 1, 0] # [0.25, 1.0, 0.25, 0.0] # [0.25, 1.0, 0.25, 1]
   match_type:  inter #center
   det_area: 0.7
   translation_size: 640
@@ -64,8 +57,6 @@ filters:
   height:
     bias: -100
     y_crop: 200
-  hue: False # flag for using hue filter
-  depth: False # flag for using dynamic depth filter
 
 clusters:
   min_single_fruit_distance: 150
