--- a/analytics/tools/mapping.yml
+++ b/analytics/tools/mapping.yml
@@ -3,7 +3,7 @@ tomato:
   phenotyping:
     plot_per_row: { '7': 12,'8': 12,'9': 13,'10': 15,'11': 15,'18': 8,'19': 8,'20': 8,'21': 8 }
     rows:
-      side1 : ['9', '8','11','19','21']
-      side2 : ['9','7','10','18','20']
+      side1 : ['19','8','11','21']
+      side2 : ['18','7','10','20']
   commercial:
     rows: {"GAM31":['12','13', '6','5'],"GAM29":['14','15','3','4'],"GAM27":['16','17','1','2']}
