--- a/vision/pipelines/config/runtime_config.yaml
+++ b/vision/pipelines/config/runtime_config.yaml
@@ -1,6 +1,7 @@
-movie_path: /home/yotam/FruitSpec/Sandbox/Syngenta/pre_ZED_90.svo
-output_folder: /home/yotam/FruitSpec/Sandbox/Syngenta/tomatoes/pre_ZED_90_1Class_aug_5
-#movie_path:
+movie_path: /home/fruitspec-lab/Downloads/0.8m1stm/ZED_1.svo
+output_folder:  /home/fruitspec-lab/Downloads/0.8m1stm/output
+output_folder_track: $(output_folder)/tracking
+output_folder_annotate: $(output_folder)/annotation
 
 frame_size:  [1920, 1080] # [2048, 1536]
 rotate: 2 # 0: no rotate, 1: COUNTERCLOCKWISE, 2: CLOCKWISE
@@ -9,11 +10,13 @@ depth_maximum: 2.5 # 8 counter
 
 debug:
   is_debug: true  # master switch
-  tracker_windows: true
-  tracker_results: true
+  tracker_windows: false
+  tracker_results: false
   det_results: false
   raw_frame: false
   depth: false
   tracker: None
   clusters: false
+  hue_histogram: false
+  annotate: true
 
