--- a/analytics/config/runtime.yml
+++ b/analytics/config/runtime.yml
@@ -1,5 +1,5 @@
 fruit_type: tomato
-scan_date: '230123'
+scan_date: 'window_trial'
 analysis_path: /home/fruitspec-lab/Downloads/${fruit_type}/analysis/${scan_date}
 output_path: /home/fruitspec-lab/Downloads/${fruit_type}/analysis/${scan_date}
 video_path: /home/fruitspec-lab/Downloads/${fruit_type}/${scan_date}
