--- a/analytics/config/runtime.yml
+++ b/analytics/config/runtime.yml
@@ -1,5 +1,6 @@
 fruit_type: tomato
-scan_date: 'window_trial'
-analysis_path: /home/fruitspec-lab/Downloads/${fruit_type}/analysis/${scan_date}
-output_path: /home/fruitspec-lab/Downloads/${fruit_type}/analysis/${scan_date}
-video_path: /home/fruitspec-lab/Downloads/${fruit_type}/${scan_date}
+scan_date: '010323'
+main_path_com: /media/yotam/Extreme SSD/syngenta trail
+analysis_path: ${main_path_com}/${fruit_type}/analysis/${scan_date}
+output_path: ${main_path_com}/${fruit_type}/analysis/${scan_date}
+video_path: ${main_path_com}/${fruit_type}/${scan_date}
