--- a/vision/pipelines/config/runtime_config.yaml
+++ b/vision/pipelines/config/runtime_config.yaml
@@ -1,9 +1,9 @@
-movie_path: /home/yotam/FruitSpec/Sandbox/Syngenta/pre_ZED_90.svo
-output_folder: /home/yotam/FruitSpec/Sandbox/Syngenta/tomatoes/pre_ZED_90_1Class_aug_5
+movie_path:  /home/fruitspec-lab-3/FruitSpec/Sandbox/Counter/FSI_Stretch/wetransfer_clahe-first-exp_2023-03-09_1309/clahe_975_exp8K/
+output_folder:  /home/fruitspec-lab-3/FruitSpec/Sandbox/Counter/FSI_Stretch/test2
 #movie_path:
 
 frame_size:  [1920, 1080] # [2048, 1536]
-rotate: 2 # 0: no rotate, 1: COUNTERCLOCKWISE, 2: CLOCKWISE
+rotate: 1 # 0: no rotate, 1: COUNTERCLOCKWISE, 2: CLOCKWISE
 depth_minimum: 0.1 # 1 counter
 depth_maximum: 2.5 # 8 counter
 
