--- a/application/utils/config.yaml
+++ b/application/utils/config.yaml
@@ -1,8 +1,9 @@
+upload bucket name: fsCounter
+upload prefix: uploads
 counter number: 2
 logs path: "~/Desktop/counter_logs/"
 log name: "log"
 GUI: true
-acquisition start: "~/fruitspec/executables/JAI_Acquisition_capi"
 default camera data:
   clear:
     FPS: 15
