--- a/analytics/tools/mapping.yml
+++ b/analytics/tools/mapping.yml
@@ -2,8 +2,6 @@ plot_code_map_path: /config/Map_trees_to_plot.csv
 tomato:
   phenotyping:
     plot_per_row: { '7': 12,'8': 12,'9': 13,'10': 15,'11': 15,'18': 8,'19': 8,'20': 8,'21': 8 }
-    rows:
-      side1 : ['8','10','19','21','9']
-      side2 : ['7','11','18','20','9']
+    rows: ['7','8','9','10','11','18','19','20','21']
   commercial:
     rows: {"GAM31":['12','13', '6','5'],"GAM29":['14','15','3','4'],"GAM27":['16','17','1','2']}
