--- a/application/DataManager/data_config.yaml
+++ b/application/DataManager/data_config.yaml
@@ -1,8 +1,8 @@
 global polygon: "global"
 update interval: 10
-upload interval: 5 * 60
+upload interval: 300
 scanner path: ~/Desktop/scan.csv
 file prefix: 0
 use feather: true
 request timeout: 10
-output path: ~/Desktop
+output path: /home/mic-730ai/Desktop
