--- a/vision/pipelines/config/pipeline_config.yaml
+++ b/vision/pipelines/config/pipeline_config.yaml
@@ -19,7 +19,7 @@ exp_file: /home/fruitspec-lab-3/FruitSpec/Code/Matan/fsCounter_1/vision/detector
 #ckpt_file: /home/yotam/FruitSpec/weights/tomatoes/Run_28_oct_curated_2x/best_ckpt.pth # new RGB tomatoes 28/11
 #ckpt_file: /home/yotam/FruitSpec/Sandbox/Syngenta/weights/tomatoes/Run_30_oct_2022_1Class_aug_tasq/best_ckpt.pth # new RGB tomatoes 1 class 29/11
 #ckpt_file: /home/yotam/FruitSpec/Sandbox/Syngenta/weights/tomatoes/Run_6_Dec_2022_1Class_aug_tasqV2/best_ckpt.pth # RGB tasq v2 #Lab 2
-ckpt_file: /home/fruitspec-lab/FruitSpec/weights/Run_6_Dec_2022_1Class_aug_tasqV2/best_ckpt.pth # RGB tasq v2 Lab 1
+ckpt_file: /home/fruitspec-lab-3/FruitSpec/weights/Run_6_Dec_2022_1Class_aug_tasqV2/best_ckpt.pth # RGB tasq v2 Lab 1
 #ckpt_file: /home/fruitspec-lab-3/FruitSpec/weights/Run_6_Dec_2022_1Class_aug_tasqV2/best_ckpt.pth # RGB tasq v2 lab3
 
 device: cuda
@@ -47,7 +47,7 @@ tracker:
   major: 1.2 #3
   minor: 0.8 #2.5
   max_losses: 3  # 10
-  score_weights: [0.5, 1, 1, 0] # [0.25, 1.0, 0.25, 0.0] # [0.25, 1.0, 0.25, 1]
+  score_weights: [0.5, 1, 0.5, 1, 0] # [0.25, 1.0, 0.25, 0.0] # [0.25, 1.0, 0.25, 1]
   match_type:  inter #center
   det_area: 0.7
   translation_size: 640
