--- a/analytics/config/runtime.yml
+++ b/analytics/config/runtime.yml
@@ -1,7 +1,7 @@
-customer: syngenta
+customer: arugga
 fruit_type: tomato
-scan_date: '150223'
-main_path_com: /media/yotam/Extreme SSD/syngenta trail
+scan_date: '150323'
+main_path_com: /home/fruitspec-lab/Downloads/
 analysis_path: ${main_path_com}/${fruit_type}/analysis/${scan_date}
 output_path: ${main_path_com}/${fruit_type}/analysis/${scan_date}
 video_path: ${main_path_com}/${fruit_type}/${scan_date}
