--- a/analytics/config/runtime.yml
+++ b/analytics/config/runtime.yml
@@ -1,6 +1,6 @@
-customer: arugga
+customer: syngenta
 fruit_type: tomato
-scan_date: '150323'
+scan_date: '010323'
 main_path_com: /home/fruitspec-lab/Downloads/
 analysis_path: ${main_path_com}/${fruit_type}/analysis/${scan_date}
 output_path: ${main_path_com}/${fruit_type}/analysis/${scan_date}
