--- a/analytics/config/runtime.yml
+++ b/analytics/config/runtime.yml
@@ -1,7 +1,7 @@
 customer: syngenta
 fruit_type: tomato
 scan_date: '010323'
-main_path_com: /home/fruitspec-lab/Downloads/
+main_path_com: /media/fruitspec-lab-3/Extreme SSD/syngenta trail
 analysis_path: ${main_path_com}/${fruit_type}/analysis/${scan_date}
 output_path: ${main_path_com}/${fruit_type}/analysis/${scan_date}
 video_path: ${main_path_com}/${fruit_type}/${scan_date}
