single scan config filter cluster and fruits - TBD

--- a/analytics/tools/mapping.yml
+++ b/analytics/tools/mapping.yml
@@ -3,10 +3,13 @@ tomato:
   syngenta:
     phenotyping:
       plot_per_row: { '7': 12,'8': 12,'9': 13,'10': 15,'11': 15,'18': 8,'19': 8,'20': 8,'21': 8 }
-      rows: ['7','8','9','10','11','18','19','20','21']
+      rows: [ '7','8','9','10','11','18','19','20','21' ]
     commercial:
-      rows: {"GAM31":['12','13', '6','5'],"GAM29":['14','15','3','4'],"GAM27":['16','17','1','2']}
+      rows: { "GAM31": [ '12','13', '6','5' ],"GAM29": [ '14','15','3','4' ],"GAM27": [ '16','17','1','2' ] }
   arugga:
     commercial:
-      rows: { "run1": ['1'],"run2": ['2'],"run3": ['3'], "run4": ['4'], "run5": ['5'],"run6": ['6'] }
+      rows: { "run1": [ '1' ],"run2": [ '2' ],"run3": [ '3' ], "run4": [ '4' ], "run5": [ '5' ],"run6": [ '6' ] }
+  trials:
+    commercial:
+      rows: { }
 
