--- a/analytics/config/runtime.yml
+++ b/analytics/config/runtime.yml
@@ -1,6 +1,7 @@
-pre_post: false
+pre_post: true
 customer: syngenta
 fruit_type: tomato
+by_cluster: false
 scan_date: '010323'
 main_path_com: /media/fruitspec-lab-3/Extreme SSD/syngenta trail
 analysis_path: ${main_path_com}/${fruit_type}/analysis/${scan_date}
