--- a/vision/pipelines/config/pipeline_config.yaml
+++ b/vision/pipelines/config/pipeline_config.yaml
@@ -1,25 +1,8 @@
 # config.yaml
-exp_file: /home/fruitspec-lab-3/FruitSpec/Code/Matan/fsCounter_1/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_RGB.py  # tomatoes
-#exp_file: /home/yotam/FruitSpec/Code/fsCounter_1/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_hires.py  # counter
-#exp_file: /home/yotam/FruitSpec/Code/fsCounter_1/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr.py       # baseline
-#exp_file: /home/yotam/FruitSpec/Code/fsCounter_1/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_syn_jai.py # pepper
-#exp_file: /home/yotam/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_RGB.py  # tomatoes # Lab2
-#exp_file: /home/fruitspec-lab/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_RGB.py # Lab 1
+exp_file: /home/fruitspec-lab/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_RGB.py # Lab 1
 #exp_file: /home/fruitspec-lab-3/FruitSpec/Code/Matan/fsCounter_1/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_RGB.py  # tomatoes lab3
-#exp_file: /home/yotam/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_hires.py  # counter
-#exp_file: /home/yotam/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr.py       # baseline
-#exp_file: /home/yotam/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_syn_jai.py # pepper
 
-#ckpt_file: /home/yotam/FruitSpec/Sandbox/Run_2_13_nov_2022/best_ckpt.pth # tomatoes
-#ckpt_file: /home/yotam/FruitSpec/weights/fs_yolox_tiny_lr/best_ckpt.pth # pre-trained coco
-#ckpt_file: /home/yotam/FruitSpec/weights/Run_2_7_oct/best_ckpt.pth # counter
-#ckpt_file: /home/yotam/FruitSpec/weights/pepper/Run_3_22_oct_2022/best_ckpt.pth # pepper 200 img train
-#ckpt_file: /home/yotam/FruitSpec/weights/pepper/Run_1_23_oct_2022_400img/best_ckpt.pth # pepper 400 img train
-#ckpt_file: /home/yotam/FruitSpec/Sandbox/Run_26_oct_2022_curated_data/best_ckpt.pth  # new RGB tomatoes
-#ckpt_file: /home/yotam/FruitSpec/weights/tomatoes/Run_28_oct_curated_2x/best_ckpt.pth # new RGB tomatoes 28/11
-#ckpt_file: /home/yotam/FruitSpec/Sandbox/Syngenta/weights/tomatoes/Run_30_oct_2022_1Class_aug_tasq/best_ckpt.pth # new RGB tomatoes 1 class 29/11
-#ckpt_file: /home/yotam/FruitSpec/Sandbox/Syngenta/weights/tomatoes/Run_6_Dec_2022_1Class_aug_tasqV2/best_ckpt.pth # RGB tasq v2 #Lab 2
-ckpt_file: /home/fruitspec-lab-3/FruitSpec/weights/Run_6_Dec_2022_1Class_aug_tasqV2/best_ckpt.pth # RGB tasq v2 Lab 1
+ckpt_file: /home/fruitspec-lab/FruitSpec/weights/Run_6_Dec_2022_1Class_aug_tasqV2/best_ckpt.pth # RGB tasq v2 Lab 1
 #ckpt_file: /home/fruitspec-lab-3/FruitSpec/weights/Run_6_Dec_2022_1Class_aug_tasqV2/best_ckpt.pth # RGB tasq v2 lab3
 
 device: cuda
@@ -31,8 +14,8 @@ dim_method: pix_size_median # with what method to get the dimensions, reg - old 
 margin: 0.2 # the lower the margin the more pixels we take from the center
 
 detector:
-  confidence: 0.85
-  nms: 0.7
+  confidence: 0.7
+  nms: 0.6
   num_of_classes: 1
   fp16: true
   fuse: false
@@ -60,7 +43,7 @@ translation:
 
 filters:
   distance:
-    threshold: 1
+    threshold: 10
   duplicates:
     iou_threshold: 0.6
   size:
