--- a/application/Analysis/analysis_config.yaml
+++ b/application/Analysis/analysis_config.yaml
@@ -3,9 +3,9 @@ default weather: clear
 default acquisition parameters:
   clear:
     FPS: 15
-    IntegrationTimeRGB: 500
-    IntegrationTime800: 1000
-    IntegrationTime975: 2000
+    IntegrationTimeRGB: 1000
+    IntegrationTime800: 2000
+    IntegrationTime975: 5000
   partly cloudy:
     FPS: 15
     IntegrationTimeRGB: 700
@@ -23,3 +23,5 @@ custom acquisition parameters:
   IntegrationTime800: 1500
   IntegrationTime975: 2500
   output types: ["FSI", "RGB", "800", "975", "SVO"]
+batch size: 4
+max batches: 30
