save clahe + hist_equalization versions of the FSI

--- a/application/Analysis/analysis_config.yaml
+++ b/application/Analysis/analysis_config.yaml
@@ -8,20 +8,20 @@ default acquisition parameters:
     IntegrationTime975: 5000
   partly cloudy:
     FPS: 15
-    IntegrationTimeRGB: 700
-    IntegrationTime800: 1200
-    IntegrationTime975: 2200
+    IntegrationTimeRGB: 1000
+    IntegrationTime800: 2000
+    IntegrationTime975: 5000
   cloudy:
     FPS: 15
-    IntegrationTimeRGB: 800
-    IntegrationTime800: 1500
-    IntegrationTime975: 2500
-  output types: ["FSI", "RGB", "800", "975", "SVO"]
+    IntegrationTimeRGB: 1000
+    IntegrationTime800: 2000
+    IntegrationTime975: 5000
+  output types: ["FSI", "RGB", "SVO"]
 custom acquisition parameters:
   FPS: 15
-  IntegrationTimeRGB: 800
-  IntegrationTime800: 1500
-  IntegrationTime975: 2500
-  output types: ["FSI", "RGB", "800", "975", "SVO"]
+  IntegrationTimeRGB: 1000
+  IntegrationTime800: 2000
+  IntegrationTime975: 5000
+  output types: ["FSI", "RGB", "SVO"]
 batch size: 4
 max batches: 30
