runtime optimized: align, trt, tracker

--- a/vision/pipelines/config/pipeline_config.yaml
+++ b/vision/pipelines/config/pipeline_config.yaml
@@ -12,7 +12,9 @@ exp_file: /home/mic-730ai/fruitspec/code/matan/fsCounter/vision/detector/yolo_x/
 #ckpt_file: /home/yotam/FruitSpec/Sandbox/Run_26_oct_2022_curated_data/best_ckpt.pth  # new RGB tomatoes
 #ckpt_file: /home/yotam/FruitSpec/weights/tomatoes/Run_28_oct_curated_2x/best_ckpt.pth # new RGB tomatoes 28/11
 #ckpt_file: /home/yotam/FruitSpec/Sandbox/Syngenta/weights/tomatoes/Run_30_oct_2022_1Class_aug_tasq/best_ckpt.pth # new RGB tomatoes 1 class 29/11
-ckpt_file: /home/mic-730ai/Documents/Expriments/weights/Run_2_7_oct/best_ckpt.pth # RGB tasq v2
+#ckpt_file: /home/mic-730ai/Documents/Expriments/weights/Run_2_7_oct/best_ckpt.pth # RGB tasq v2
+ckpt_file: /home/mic-730ai/Documents/Expriments/weights/Run_2_7_oct/fs_yolox_tiny_lr_hires/model_trt.pth
+
 
 
 device: cuda
@@ -26,7 +28,7 @@ detector:
   num_of_classes: 1
   fp16: true
   fuse: false
-  trt: false
+  trt: true
 
 classes:
   full: 0
@@ -41,6 +43,7 @@ tracker:
   match_type:  inter #center #
   det_area: 0.7
   translation_size: 640
+  compile_data_path: /home/mic-730ai/fruitspec/code/matan/tracker_init.pkl
   debug: false
 
 
