collected data log

--- a/application/DataManager/data_config.yaml
+++ b/application/DataManager/data_config.yaml
@@ -1,7 +1,8 @@
 global polygon: "global"
 update interval: 10
 upload interval: 300
-scanner path: ~/Desktop/scan.csv
+scanner path: /home/mic-730ai/Desktop/scan.csv
+collected path: /home/mic-730ai/Desktop/collected.log
 file prefix: 0
 use feather: true
 request timeout: 10
