--- a/application/Analysis/runtime_config.yaml
+++ b/application/Analysis/runtime_config.yaml
@@ -23,7 +23,7 @@ depth:
   movie_path: /home/mic-730ai/fruitspec/test_data/ZED_1.svo
   frame_size: [1920, 1080]
   channels: 1
-
+  rotate: 2
 jai:
   movie_path: /home/mic-730ai/fruitspec/test_data/Result_FSI_1.mkv
   frame_size: [2048, 1536]
