--- a/application/DataManager/data_config.yaml
+++ b/application/DataManager/data_config.yaml
@@ -1,10 +1,16 @@
-global polygon: "global"
-update interval: 10
-upload interval: 300
-scanner path: /home/mic-730ai/Desktop/scan.csv
-collected path: /home/mic-730ai/Desktop/collected.log
-analyzed path: /home/mic-730ai/Desktop/analyzed.log
-file prefix: 0
-use feather: true
-request timeout: 10
-output path: /home/mic-730ai/Desktop
+global_polygon: "global"
+update_interval: 10
+upload_interval: 300
+scanner_path: /home/mic-730ai/Desktop/scan.csv
+collected_path: /home/mic-730ai/Desktop/collected.log
+analyzed_path: /home/mic-730ai/Desktop/analyzed.log
+uploaded_path: /home/mic-730ai/Desktop/uploaded.log
+output_path: /home/mic-730ai/Desktop
+file_prefix: 0
+alignment: alignment
+tracks: tracks
+use_feather: false
+request_timeout: 10
+service_endpoint: "https://counter-api.fruitspec.com/api/post_block"
+upload_bucket_name: fsCounter
+upload_prefix: uploads
