--- a/application/GPS/GPS_config.yaml
+++ b/application/GPS/GPS_config.yaml
@@ -1,5 +1,5 @@
-kml bucket name: "fruitspec-prod-caliper"
-s3 kml file name: "Blocks.kml"
-kml path: "/home/mic-730ai/Desktop/Blocks.kml"
-global polygon: "global"
-led blink sleep time: 1.5
+kml_bucket_name: "fruitspec-prod-caliper"
+s3_kml_file_name: "Blocks.kml"
+kml_path: "/home/mic-730ai/Desktop/Blocks.kml"
+global_polygon: "global"
+led_blink_sleep_time: 1.5
