--- a/application/GUI/GUI_config.yaml
+++ b/application/GUI/GUI_config.yaml
@@ -1,2 +1,2 @@
-GUI server port: 5000
-GUI startup script: "npm run dev --prefix application/GUI/JAI-Operator-client"
+GUI_server_port: 5000
+GUI_startup_script: "npm run dev --prefix application/GUI/JAI-Operator-client"
